--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,24 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>TaskFrontEend</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<head>
+    <meta charset="utf-8">
+    <title>TaskFrontEnd</title>
+    <base href="/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" type="text/css" href="assets/bootstrap4/bootstrap.min.css">
+    <link rel="stylesheet" type='text/css' href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">   
 </head>
+
 <body>
-  <app-root></app-root>
+    <app-root></app-root>
+    <script src="assets/jquery-3.2.1.min.js"></script>
+
+    <script src="assets/bootstrap4/popper.js"></script>
+    <script src="assets/bootstrap4/bootstrap.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
 </body>
+
 </html>
